        Open Session  Shift+Alt+O   Ctrl+N        KDE standard
        Page Down     Ctrl+V        Page Down     Ctrl+V is Paste in KDE
        Print         -/-           Ctrl+P        KDE standard
        Rev Search    Ctrl+R (*)    Ctrl+B        Ctrl+R is Replace in KDE
        Run           Ctrl+X        Ctrl+E        Ctrl+X is Cut in KDE
        Run Again     Shift+Ctrl+X  Ctrl+A        Ctrl+X is Cut in KDE
        Save Session  -/-           Ctrl+S        KDE standard
        Search        Ctrl+S        Ctrl+F        KDE standard
        Unkill        Ctrl+Y (*)    Shift+Ctrl+Y  Ctrl+Y is Redo in KDE

      For smoother transition, keys marked with (*) are still available
      by default, but may be re-assigned in future DDD releases.

      For full compliance to the KDE style guide, the Cut/Copy/Paste
      operations must be assigned to Ctrl+X/Ctrl+C/Ctrl+V.  This is
      done by setting `Edit->Preferences->Startup->Cut/Copy/Paste
      Bindings' to `KDE style'.  This may also become the default in
      future DDD versions.

      See the `Ddd' app-defaults file to change other key bindings.

    - Some resources had to be renamed for clarity and/or Motif conflicts:
 
        Old resource name   New resource name     Rationale
        ------------------  --------------------  ----------------
        toolBar             commandToolBar        Ambiguity
        colorIcons          colorWMIcons          Ambiguity
	dataWindow          openDataWindow        sourceWindow used in Motif
        sourceWindow        openSourceWindow      sourceWindow used in Motif
        debuggerConsole     openDebuggerConsole   sourceWindow used in Motif
        traceDialog         trace                 One resource suffices
        traceShellCommands  trace
        ungrabMousePointer  checkGrabs            New functionality
        showStartupLogo     splashScreen +        Use separate resources
                            splashScreenColorKey
